<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="24dp"
        >

    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="24dp"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/primary">

        <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:id="@+id/logo"
                app:srcCompat="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/app_name"/>
    </androidx.cardview.widget.CardView>


    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/welcome_back"
            android:textSize="34sp"
            android:textStyle="bold"
            />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/editTextUsername"
            android:inputType="text"
            android:hint="@string/username"
            android:autofillHints="username"
            />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:inputType="textVisiblePassword"
            android:hint="@string/password"
            android:layout_marginTop="24dp"
            android:autofillHints="password"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:id="@+id/btnLogin"
            android:background="@drawable/primary_btn_bgr"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:gravity="center"
            >

        <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_an_account"
                android:textSize="16sp"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtHintSignUp"
                android:text="@string/sign_up"
                android:textSize="16sp"
                android:textColor="@color/primary"
                android:textStyle="bold"
                />
    </LinearLayout>

</LinearLayout>
