<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        >

    <!-- Appbar -->
    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                android:background="@color/white"
                app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
                app:contentInsetEndWithActions="@dimen/cardview_compat_inset_shadow"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:id="@+id/toolbar_title"
                    android:text="@string/all_notes"
                    android:textColor="@color/black2"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />

            <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/toolbar_icon"
                    android:src="@drawable/ic_lightbulb"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/back"
                    />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Body -->
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="24dp"
            android:clipToPadding="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="48dp"
            android:id="@+id/btnAddNote"
            app:fabSize="normal"
            android:src="@drawable/ic_add"
            app:tint="@color/white"
            app:backgroundTint="@color/primary"
            app:shapeAppearanceOverlay="@style/FabCircleShape"
            android:contentDescription="@string/add"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
